refactor: overhaul issue rate limiting policy and rules
- Removed the deprecated IssueRateLimitPolicy class and replaced it with a more flexible interface-based approach.
- Introduced IssueRateLimitRule interface with functional matching capabilities and a new SimpleIssueRateLimitRule implementation.
- Updated IssueContext to support application-defined attributes and improved immutability.
- Added InMemoryIssueRateLimitBackend for managing rate limits with rolling windows and separate buckets.
- Enhanced tests for the new rate limiting structure, ensuring proper functionality and validation of rules.
- Removed obsolete InMemoryIssueRateLimiterTest and IssueRateLimitPolicyTest classes.